--- a/Proyecto/galeria.html
+++ b/Proyecto/galeria.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head >
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Freya - Dulces Creaciones</title>
   </head>
   <body>
-    <header style="background-color: #8e9aaf; width: 100%; height: 200px; ">
-      <div >
-        <img src="Imagenes/Logo.png" height="200px" alt="Freya" style="float: left; "/> 
-        <h1 style="color: aliceblue; float: right; text-align: right; margin-right: 20%; font-size: 50px;">Galeria</h1>
+    <header style="background-color: #cdb4db;">
+      <div>
+        <img src="Imagenes/Logo.png" height="200px" alt="Freya" style="float: left" /> 
+        <h1 style="color: aliceblue; text-align: right; font-size: 8em; margin-right: 20%; margin-top: 0">Galeria</h1>
       </div>
       <hr>
-      <nav style="background-color: #efd3d7; text-align: center; padding: 10px 0; width: 100%; margin: 200px 0">
+      <nav style="text-align: center; background-color: #efd3d7; width: 100%; padding: 10px;">
         <a style="padding: 15px;" href="/index.html">Inicio</a> |
         <a style="padding: 15px;">Choco Fresas</a> |
         <a style="padding: 15px;">Corazones</a> |
@@ -23,17 +23,16 @@
         <a style="padding: 15px;">Cajas</a> |
       </nav>
     </header>
-    <main style="width: 100%; height: 500px; margin: 50px 0; background-color: #dee2ff">
+    <main style="width: 100%; height: 400px; margin-top: 100px;">
       <br><br>
-      <div style="height: 100%; float: left" >
+      <div style="height: 100%; float: left; margin-left: 80px" >
         <img src="Imagenes/osoSorpresa.jpeg" height=350 style="padding: 5px"/> 
         <img src="/Imagenes/unicornioSorpresa.jpeg" height=350 style="padding: 5px"/>
         <img src="/Imagenes/corazonSorpresa.jpeg" height=350 style="padding: 5px;">
       </div>
     </main>
-    <footer style="background-color: #8e9aaf; width: 100%; height: 100px;">
+    <footer style="background-color: #cdb4db; width: 100%; height: 100px; margin-top: 100px; text-align: center">
       <h1>WhatSapp 310000000 </h1>
     </footer>
-
   </body>
 </html>
