--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -6,22 +6,30 @@
     <title>Freya - Dulces Creaciones</title>
   </head>
   <body>
-    <header style="background-color: #8e9aaf; padding: 5%;">
-      <h1 style="text-align: center;">Dulces Creaciones</h1>
-      <nav style="text-align: center; background-color: #efd3d7; padding: 10px; " >
-      <a href="somos.html">Quien somos</a> |
-      <a href="galeria.html">Galeria</a> |
-      <a href="producto.html">Productos</a> |
-      <a href="contacto.html">Contactenos</a> |
+    <header style="background-color: #cdb4db; ">
+      <h1 style="text-align: center; font-size: 60px; margin-top: 20px;">Dulces Creaciones</h1>
+      <nav style="text-align: center; background-color: #f8e2ea; width: 100%" > |
+      <a href="galeria.html" style="padding: 5px;">Galeria</a> |
+      <a href="tienda.html"  style="padding: 5px;">Tienda</a> |
+      <a href="contacto.html"  style="padding: 5px;">Contactenos</a> |
       </nav>
       <hr />
     </header>
     <main style="text-align: center; padding: 20px">
       <img src="Imagenes/osoSorpresa.jpeg" alt="Oso Sorpresa" width="800" />
+      <section>
+        <article>
+          <h2 style="text-align: left; margin: 50px ">Quienes Somos</h2>
+          <p style="text-align: left;  margin: 50px">
+            Freya es un emprendimiento que nace el 14 de febrero del 2021, con la intención de llenar
+            de alegría, felicidad y elegancia; los lugares a los que llegan los productos elaborados por nosotros.
+          </p>
+        </article>
+      </section>
     </main>
     <hr />
-    <footer style="text-align: center; background-color: #8e9aaf; padding: 20px">
-      <h2>Para mayor información escribe al 30000000</h2>
+    <footer style="text-align: center; background-color: #cdb4db; padding: 20px">
+      <h2>Para mayor información escribe al WhatSapp 30000000</h2>
     </footer>
   </body>
 </html>
