--- a/Proyecto/galeria.html
+++ b/Proyecto/galeria.html
@@ -21,9 +21,11 @@
         <a style="padding: 15px;">Choco Sorpresas</a> |
         <a style="padding: 15px;">Figuras Especiales</a> |
         <a style="padding: 15px;">Cajas</a> |
+        <a href="/tienda.html">Tienda</a> |
+        <a href="contacto.html">Contactenos</a> 
       </nav>
     </header>
-    <main style="width: 100%; height: 400px; margin-top: 100px;">
+    <main style="width: 100%; height: 400px; margin-top: 100px">
       <br><br>
       <div style="height: 100%; float: left; margin-left: 80px" >
         <img src="Imagenes/osoSorpresa.jpeg" height=350 style="padding: 5px"/> 
