--- a/Proyecto/tienda.html
+++ b/Proyecto/tienda.html
@@ -13,7 +13,7 @@
             <h1 style="text-align: right; margin: 2% 20% auto; color: black; float: right; font-size: 80px">Tienda</h1>
         </div>
         <hr>
-        <nav style="background-color: #ffc8dd; text-align: center; padding: 10px">
+        <nav style="background-color: #efd3d7; text-align: center; padding: 10px">
             <a href="index.html">Inicio</a> ||
             <a href="#">Fresas</a> ||
             <a href="#">Corazones</a> ||
@@ -26,11 +26,38 @@
             <a href="#">Desayunos</a> ||
             <a href="#">Globos</a> ||
             <a href="#">Rosas</a> ||
+            <a href="/galeria.html">Galeria</a>
+            <a href="contacto.html">Contactenos</a>
         </nav>
     </header>
-    <main>
+    <main width: 100%>
+        <br>
+        <br>
+        <div style="border-radius: 20px; border-color: #ffc8dd; width: 100%; height: 300px">
+            <p>Aqui irá la imagen que está seleccionando</p>
+        </div>
+        <div style="border-radius:20px; border-color: #ffc8dd;  width: 100%; height: 300px">
+            <table>
+                <tr>
+                    <td>  Producto 1  </td>
+                    <td>  Producto 2  </td>
+                    <td>  Producto 3  </td>
+                </tr>
+                <tr>
+                    <td>  Producto 4  </td>
+                    <td>  Producto 5  </td>
+                    <td>  Producto 6  </td>
+                </tr>
+                <tr>
+                    <td>  Producto 7  </td>
+                    <td>  Producto 8  </td>
+                    <td>  Producto 9  </td>
+                </tr>
+            </table>
+        </div>
     </main>
-    <footer>
+    <footer style="background-color: #cdb4db; width: 100%; height: 100px; margin-top: 100px; text-align: center">
+        <h1>WhatSapp 310000000 </h1>
     </footer>
 </body>
 </html>
