Se agrega pagina de formulario de Registro de Clientes y enlace en el index

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -12,6 +12,7 @@
       <a href="galeria.html" style="padding: 5px;">Galeria</a> |
       <a href="tienda.html"  style="padding: 5px;">Tienda</a> |
       <a href="contacto.html"  style="padding: 5px;">Contactenos</a> |
+      <a href="registroClientes.html"  style="padding: 5px;">Clientes</a>
       </nav>
       <hr />
     </header>
