Se agrega carpeta de CSS con las hojas de estilo y se modifican los html con los CSS correspondiente

--- a/Proyecto/galeria.html
+++ b/Proyecto/galeria.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Freya - Dulces Creaciones</title>
+    <title>Galeria - Freya</title>
+    <link href="CSS/galeria.css" rel="stylesheet">
   </head>
   <body>
-    <header style="background-color: #cdb4db;">
+    <header class="header">
       <div>
         <img src="Imagenes/Logo.png" height="200px" alt="Freya" style="float: left" /> 
         <h1 style="color: aliceblue; text-align: right; font-size: 8em; margin-right: 20%; margin-top: 0">Galeria</h1>
       </div>
       <hr>
       <nav style="text-align: center; background-color: #efd3d7; width: 100%; padding: 10px;">
-        <a style="padding: 15px;" href="/index.html">Inicio</a> |
+        <a style="padding: 15px;" href="index.html">Inicio</a> |
         <a style="padding: 15px;">Choco Fresas</a> |
         <a style="padding: 15px;">Corazones</a> |
         <a style="padding: 15px;">Licores</a> |
