--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -4,11 +4,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Freya - Dulces Creaciones</title>
+    <link href="CSS/index.css" rel="stylesheet">
   </head>
   <body>
-    <header style="background-color: #cdb4db; ">
-      <h1 style="text-align: center; font-size: 60px; margin-top: 20px;">Dulces Creaciones</h1>
-      <nav style="text-align: center; background-color: #f8e2ea; width: 100%" > |
+    <header class="header">
+      <h1>FREYA</h1>
+      <h2>Dulces Creaciones</h2>
+      <nav> |
       <a href="galeria.html" style="padding: 5px;">Galeria</a> |
       <a href="tienda.html"  style="padding: 5px;">Tienda</a> |
       <a href="contacto.html"  style="padding: 5px;">Contactenos</a> |
