--- a/Proyecto/tienda.html
+++ b/Proyecto/tienda.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda - Freya</title>
+    <link href="CSS/tienda.css" rel="stylesheet">
 </head>
 <body>
-    <header style="background-color: #cdb4db; width: 100%; height: 220px;">
+    <header class="header">
         <div>
             <img src="/Imagenes/sticker.png" style=" width: 200px; margin-left: 20%;">
             <h1 style="text-align: right; margin: 2% 20% auto; color: black; float: right; font-size: 80px">Tienda</h1>
