--- a/Proyecto/galeria.html
+++ b/Proyecto/galeria.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galeria - Freya</title>
-    <link href="CSS/galeria.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link href="CSS/estilos.css" rel="stylesheet">
   </head>
   <body>
     <header class="header">
@@ -14,17 +15,25 @@
         <h1 style="color: aliceblue; text-align: right; font-size: 8em; margin-right: 20%; margin-top: 0">Galeria</h1>
       </div>
       <hr>
-      <nav style="text-align: center; background-color: #efd3d7; width: 100%; padding: 10px;">
-        <a style="padding: 15px;" href="index.html">Inicio</a> |
-        <a style="padding: 15px;">Choco Fresas</a> |
-        <a style="padding: 15px;">Corazones</a> |
-        <a style="padding: 15px;">Licores</a> |
-        <a style="padding: 15px;">Choco Sorpresas</a> |
-        <a style="padding: 15px;">Figuras Especiales</a> |
-        <a style="padding: 15px;">Cajas</a> |
-        <a href="/tienda.html">Tienda</a> |
-        <a href="contacto.html">Contactenos</a> 
-      </nav>
+      <nav class="navegacion">
+        <div>
+            <ul class="menu">
+                <li><a href="index.html"  style="padding: 5px;">Inicio</a></li> |
+                <li><a href="galeria.html" style="padding: 5px;">Galeria</a>
+                    <ul class="submenu">
+                        <li><a style="padding: 15px;" href="#">Choco Fresas</a></li>
+                        <li><a style="padding: 15px;" href="#">Corazones</a></li>
+                        <li><a style="padding: 15px;" href="#">Licores</a></li>
+                        <li><a style="padding: 15px;" href="#">Choco Sorpresas</a></li>
+                        <li><a style="padding: 15px;" href="#">Figuras Especiales</a></li>
+                        <li><a style="padding: 15px;" href="#">Cajas</a></li>
+                        </ul></li> |
+                <li><a href="tienda.html"  style="padding: 5px;">Tienda</a></li> |
+                <li><a href="registroClientes.html"  style="padding: 5px;">Registrese</a></li>  |
+                <li><a href="contacto.html"  style="padding: 5px;">Contactenos</a></li>  |
+            </ul>
+        </div>
+    </nav>
     </header>
     <main style="width: 100%; height: 400px; margin-top: 100px">
       <br><br>
@@ -35,7 +44,7 @@
       </div>
     </main>
     <footer style="background-color: #cdb4db; width: 100%; height: 100px; margin-top: 100px; text-align: center">
-      <h1>WhatSapp 310000000 </h1>
+      <h2>Para mayor información escribe al WhatsApp <i class="bi bi-whatsapp">30000000</i></h2>
     </footer>
   </body>
 </html>
