--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -4,18 +4,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Freya - Dulces Creaciones</title>
-    <link href="CSS/index.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link href="CSS/estilos.css" rel="stylesheet">
   </head>
   <body>
     <header class="header">
       <h1>FREYA</h1>
       <h2>Dulces Creaciones</h2>
-      <nav> |
-      <a href="galeria.html" style="padding: 5px;">Galeria</a> |
-      <a href="tienda.html"  style="padding: 5px;">Tienda</a> |
-      <a href="contacto.html"  style="padding: 5px;">Contactenos</a> |
-      <a href="registroClientes.html"  style="padding: 5px;">Clientes</a>
-      </nav>
+      <nav class="navegacion">
+        <div>
+            <ul class="menu">
+                <li><a href="contacto.html"  style="padding: 5px;">Contactenos</a></li> |
+                <li><a href="galeria.html" style="padding: 5px;">Galeria</a>
+                    <ul class="submenu">
+                        <li><a style="padding: 15px;" href="#">Choco Fresas</a></li>
+                        <li><a style="padding: 15px;" href="#">Corazones</a></li>
+                        <li><a style="padding: 15px;" href="#">Licores</a></li>
+                        <li><a style="padding: 15px;" href="#">Choco Sorpresas</a></li>
+                        <li><a style="padding: 15px;" href="#">Figuras Especiales</a></li>
+                        <li><a style="padding: 15px;" href="#">Cajas</a></li>
+                        </ul></li> |
+                <li><a href="tienda.html"  style="padding: 5px;">Tienda</a></li> |
+                <li><a href="registroClientes.html"  style="padding: 5px;">Registrese</a></li>  |
+            </ul>
+        </div>
+    </nav>
       <hr />
     </header>
     <main style="text-align: center; padding: 20px">
@@ -32,7 +45,7 @@
     </main>
     <hr />
     <footer style="text-align: center; background-color: #cdb4db; padding: 20px">
-      <h2>Para mayor información escribe al WhatSapp 30000000</h2>
+      <h2>Para mayor información escribe al WhatsApp <i class="bi bi-whatsapp">30000000</i></h2>
     </footer>
   </body>
 </html>
