--- a/Proyecto/registroClientes.html
+++ b/Proyecto/registroClientes.html
@@ -5,10 +5,29 @@
         <meta http-equiv="X-UA-Compatible" content="IE-Edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <title>Clientes - Dulces Creaciones</title>
-        <link href="CSS/clientes.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link href="CSS/estilos.css" rel="stylesheet">
     </head>
     <body>
         <header class="header">
+            <nav class="navegacion">
+                <div>
+                    <ul class="menu">
+                        <li><a href="index.html"  style="padding: 5px;">Inicio</a></li> |
+                        <li><a href="galeria.html" style="padding: 5px;">Galeria</a>
+                            <ul class="submenu">
+                                <li><a style="padding: 15px;" href="#">Choco Fresas</a></li>
+                                <li><a style="padding: 15px;" href="#">Corazones</a></li>
+                                <li><a style="padding: 15px;" href="#">Licores</a></li>
+                                <li><a style="padding: 15px;" href="#">Choco Sorpresas</a></li>
+                                <li><a style="padding: 15px;" href="#">Figuras Especiales</a></li>
+                                <li><a style="padding: 15px;" href="#">Cajas</a></li>
+                                </ul></li> |
+                        <li><a href="tienda.html"  style="padding: 5px;">Tienda</a></li> |
+                        <li><a href="contacto.html"  style="padding: 5px;">Contactenos</a></li>  |
+                    </ul>
+                </div>
+            </nav>
             <div class="titulo-logo2">
                 <div class="titulo2">
                     <h1><em>Registro de Clientes</em></h1>
@@ -69,7 +88,7 @@
         </main>
 
         <footer class="footer">
-            <h2>Todos los derechos reservados - MISIONTIC 2022</h2>
+            <h2>Para mayor información escribe al WhatsApp <i class="bi bi-whatsapp">30000000</i></h2>
         </footer>
 
     </body>
