Se agrega menu responsivo en todas las paginas

--- a/Proyecto/galeria.html
+++ b/Proyecto/galeria.html
@@ -15,10 +15,12 @@
         <h1 style="color: aliceblue; text-align: right; font-size: 8em; margin-right: 20%; margin-top: 0">Galeria</h1>
       </div>
       <hr>
+      <input type="checkbox" id="boton-menu">
+      <label for="boton-menu"><i class="bi bi-list"></i></label>
       <nav class="navegacion">
         <div>
             <ul class="menu">
-                <li><a href="index.html"  style="padding: 5px;">Inicio</a></li> |
+                <li><a href="contacto.html"  style="padding: 5px;">Contactenos</a></li> |
                 <li><a href="galeria.html" style="padding: 5px;">Galeria</a>
                     <ul class="submenu">
                         <li><a style="padding: 15px;" href="#">Choco Fresas</a></li>
@@ -30,7 +32,6 @@
                         </ul></li> |
                 <li><a href="tienda.html"  style="padding: 5px;">Tienda</a></li> |
                 <li><a href="registroClientes.html"  style="padding: 5px;">Registrese</a></li>  |
-                <li><a href="contacto.html"  style="padding: 5px;">Contactenos</a></li>  |
             </ul>
         </div>
     </nav>
