--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -11,6 +11,8 @@
     <header class="header">
       <h1>FREYA</h1>
       <h2>Dulces Creaciones</h2>
+      <input type="checkbox" id="boton-menu">
+      <label for="boton-menu"><i class="bi bi-list"></i></label>
       <nav class="navegacion">
         <div>
             <ul class="menu">
