--- a/Proyecto/tienda.html
+++ b/Proyecto/tienda.html
@@ -13,31 +13,32 @@
         <div>
             <img src="/Imagenes/sticker.png" style=" width: 200px; margin-left: 20%;">
             <h1 style="text-align: right; margin: 2% 20% auto; color: black; float: right; font-size: 80px">Tienda</h1>
-        </div>
-        <hr>
+            <input type="checkbox" id="boton-menu">
+        <label for="boton-menu"><i class="bi bi-list"></i></label>
         <nav class="navegacion">
-            <div>
-                <ul class="menu">
-                    <li><a href="index.html"  style="padding: 5px;">Inicio</a></li> |
-                    <li><a href="galeria.html" style="padding: 5px;">Galeria</a>
-                        <ul class="submenu">
-                            <li><a style="padding: 15px;" href="#">Choco Fresas</a></li>
-                            <li><a style="padding: 15px;" href="#">Corazones</a></li>
-                            <li><a style="padding: 15px;" href="#">Licores</a></li>
-                            <li><a style="padding: 15px;" href="#">Choco Sorpresas</a></li>
-                            <li><a style="padding: 15px;" href="#">Figuras Especiales</a></li>
-                            <li><a style="padding: 15px;" href="#">Cajas</a></li>
-                            </ul></li> |
-                    <li><a href="tienda.html"  style="padding: 5px;">Tienda</a></li> |
-                    <li><a href="registroClientes.html"  style="padding: 5px;">Registrese</a></li> |
-                    <li><a href="contacto.html"  style="padding: 5px;">Contactenos</a></li>  |
-                </ul>
-            </div>
-        </nav>
+          <div>
+              <ul class="menu">
+                  <li><a href="contacto.html"  style="padding: 5px;">Contactenos</a></li> |
+                  <li><a href="galeria.html" style="padding: 5px;">Galeria</a>
+                      <ul class="submenu">
+                          <li><a style="padding: 15px;" href="#">Choco Fresas</a></li>
+                          <li><a style="padding: 15px;" href="#">Corazones</a></li>
+                          <li><a style="padding: 15px;" href="#">Licores</a></li>
+                          <li><a style="padding: 15px;" href="#">Choco Sorpresas</a></li>
+                          <li><a style="padding: 15px;" href="#">Figuras Especiales</a></li>
+                          <li><a style="padding: 15px;" href="#">Cajas</a></li>
+                          </ul></li> |
+                  <li><a href="tienda.html"  style="padding: 5px;">Tienda</a></li> |
+                  <li><a href="registroClientes.html"  style="padding: 5px;">Registrese</a></li>  |
+              </ul>
+          </div>
+        </nav><hr>
+        </div>
+      
     </header>
+    <br><br><br><br><br><br>
     <main width: 100%>
-        <br>
-        <br>
+        
         <div style="border-radius: 20px; border-color: #ffc8dd; width: 100%; height: 300px">
             <p>Aqui irá la imagen que está seleccionando</p>
         </div>
