--- a/Proyecto/contacto.html
+++ b/Proyecto/contacto.html
@@ -15,24 +15,26 @@
             <h1>Freya Dulces Creaciones</h1>
             <h2>Siempre en contacto</h2>                  
         </div>
+        <input type="checkbox" id="boton-menu">
+        <label for="boton-menu"><i class="bi bi-list"></i></label>
         <nav class="navegacion">
-            <div>
-                <ul class="menu">
-                    <li><a href="index.html"  style="padding: 5px;">Inicio</a></li> |
-                    <li><a href="galeria.html" style="padding: 5px;">Galeria</a>
-                        <ul class="submenu">
-                            <li><a style="padding: 15px;" href="#">Choco Fresas</a></li>
-                            <li><a style="padding: 15px;" href="#">Corazones</a></li>
-                            <li><a style="padding: 15px;" href="#">Licores</a></li>
-                            <li><a style="padding: 15px;" href="#">Choco Sorpresas</a></li>
-                            <li><a style="padding: 15px;" href="#">Figuras Especiales</a></li>
-                            <li><a style="padding: 15px;" href="#">Cajas</a></li>
-                            </ul></li> |
-                    <li><a href="tienda.html"  style="padding: 5px;">Tienda</a></li> |
-                    <li><a href="registroClientes.html"  style="padding: 5px;">Registrese</a></li>  |
-                </ul>
-            </div>
-        </nav>
+          <div>
+              <ul class="menu">
+                  <li><a href="contacto.html"  style="padding: 5px;">Contactenos</a></li> |
+                  <li><a href="galeria.html" style="padding: 5px;">Galeria</a>
+                      <ul class="submenu">
+                          <li><a style="padding: 15px;" href="#">Choco Fresas</a></li>
+                          <li><a style="padding: 15px;" href="#">Corazones</a></li>
+                          <li><a style="padding: 15px;" href="#">Licores</a></li>
+                          <li><a style="padding: 15px;" href="#">Choco Sorpresas</a></li>
+                          <li><a style="padding: 15px;" href="#">Figuras Especiales</a></li>
+                          <li><a style="padding: 15px;" href="#">Cajas</a></li>
+                          </ul></li> |
+                  <li><a href="tienda.html"  style="padding: 5px;">Tienda</a></li> |
+                  <li><a href="registroClientes.html"  style="padding: 5px;">Registrese</a></li>  |
+              </ul>
+          </div>
+      </nav>
 
     </header>
     
@@ -55,7 +57,7 @@
                 <input type="number" id="telefono" name="telefono" class="campo"><br><br>
 
                 <label for="mensaje">Dejenos su mensaje</label><br>
-                <textarea id="mensaje" name="mensaje" rows="15" cols="70" class="campo" style="width: 100%;"></textarea><br><br>
+                <textarea id="mensaje" name="mensaje" rows="15" cols="70" class="campo" style="width: 80%;"></textarea><br><br>
 
                 <input type="submit" id="Enviar" name="Enviar" class="enviar">
                 
