--- a/Proyecto/registroClientes.html
+++ b/Proyecto/registroClientes.html
@@ -10,24 +10,26 @@
     </head>
     <body>
         <header class="header">
-            <nav class="navegacion">
-                <div>
-                    <ul class="menu">
-                        <li><a href="index.html"  style="padding: 5px;">Inicio</a></li> |
-                        <li><a href="galeria.html" style="padding: 5px;">Galeria</a>
-                            <ul class="submenu">
-                                <li><a style="padding: 15px;" href="#">Choco Fresas</a></li>
-                                <li><a style="padding: 15px;" href="#">Corazones</a></li>
-                                <li><a style="padding: 15px;" href="#">Licores</a></li>
-                                <li><a style="padding: 15px;" href="#">Choco Sorpresas</a></li>
-                                <li><a style="padding: 15px;" href="#">Figuras Especiales</a></li>
-                                <li><a style="padding: 15px;" href="#">Cajas</a></li>
-                                </ul></li> |
-                        <li><a href="tienda.html"  style="padding: 5px;">Tienda</a></li> |
-                        <li><a href="contacto.html"  style="padding: 5px;">Contactenos</a></li>  |
-                    </ul>
-                </div>
-            </nav>
+            <input type="checkbox" id="boton-menu">
+      <label for="boton-menu"><i class="bi bi-list"></i></label>
+      <nav class="navegacion">
+        <div>
+            <ul class="menu">
+                <li><a href="contacto.html"  style="padding: 5px;">Contactenos</a></li> |
+                <li><a href="galeria.html" style="padding: 5px;">Galeria</a>
+                    <ul class="submenu">
+                        <li><a style="padding: 15px;" href="#">Choco Fresas</a></li>
+                        <li><a style="padding: 15px;" href="#">Corazones</a></li>
+                        <li><a style="padding: 15px;" href="#">Licores</a></li>
+                        <li><a style="padding: 15px;" href="#">Choco Sorpresas</a></li>
+                        <li><a style="padding: 15px;" href="#">Figuras Especiales</a></li>
+                        <li><a style="padding: 15px;" href="#">Cajas</a></li>
+                        </ul></li> |
+                <li><a href="tienda.html"  style="padding: 5px;">Tienda</a></li> |
+                <li><a href="registroClientes.html"  style="padding: 5px;">Registrese</a></li>  |
+            </ul>
+        </div>
+    </nav>
             <div class="titulo-logo2">
                 <div class="titulo2">
                     <h1><em>Registro de Clientes</em></h1>
