Se modifica el estilo de las imagenes para el index, creando un slider, se agregan imagenes correspondientes

--- a/Proyecto/contacto.html
+++ b/Proyecto/contacto.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header>
         <div class="titulo">
             <h1>Freya Dulces Creaciones</h1>
             <h2>Siempre en contacto</h2>                  
