--- a/Proyecto/galeria.html
+++ b/Proyecto/galeria.html
@@ -9,7 +9,7 @@
     <link href="CSS/estilos.css" rel="stylesheet">
   </head>
   <body>
-    <header class="header">
+    <header>
       <div>
         <img src="Imagenes/Logo.png" height="200px" alt="Freya" style="float: left" /> 
         <h1 style="color: aliceblue; text-align: right; font-size: 8em; margin-right: 20%; margin-top: 0">Galeria</h1>
