--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -8,7 +8,7 @@
     <link href="CSS/estilos.css" rel="stylesheet">
   </head>
   <body>
-    <header class="header">
+    <header>
       <h1>FREYA</h1>
       <h2>Dulces Creaciones</h2>
       <input type="checkbox" id="boton-menu">
@@ -33,8 +33,16 @@
     </nav>
       <hr />
     </header>
-    <main style="text-align: center; padding: 20px">
-      <img src="Imagenes/osoSorpresa.jpeg" alt="Oso Sorpresa" width="800" />
+    <main> 
+      <section class="slider">
+        <ul>
+          <li><img class="IMG_index" src="Imagenes/osoSorpresa.jpeg" alt=""></li>
+          <li><img class="IMG_index" src="Imagenes/15Fresas.jpeg" alt=""></li>
+          <li><img class="IMG_index" src="Imagenes/8fresas_Cerveza.jpeg" alt="" style="width: 400px"></li>
+          <li><img class="IMG_index" src="Imagenes/caja1.jpeg" alt=""></li>
+        </ul>
+      </section>
+    
       <section>
         <article>
           <h2 style="text-align: left; margin: 50px ">Quienes Somos</h2>
@@ -43,7 +51,7 @@
             de alegría, felicidad y elegancia; los lugares a los que llegan los productos elaborados por nosotros.
           </p>
         </article>
-      </section>
+      </section> 
     </main>
     <hr />
     <footer style="text-align: center; background-color: #cdb4db; padding: 20px">
