--- a/Proyecto/tienda.html
+++ b/Proyecto/tienda.html
@@ -9,10 +9,10 @@
     <link href="CSS/estilos.css" rel="stylesheet">
 </head>
 <body>
-    <header class="header">
+    <header>
         <div>
-            <img src="/Imagenes/sticker.png" style=" width: 200px; margin-left: 20%;">
-            <h1 style="text-align: right; margin: 2% 20% auto; color: black; float: right; font-size: 80px">Tienda</h1>
+            <img src="/Imagenes/logo.png" style=" width: 200px; margin-left: 20%;">
+            <h1>Tienda</h1>
             <input type="checkbox" id="boton-menu">
         <label for="boton-menu"><i class="bi bi-list"></i></label>
         <nav class="navegacion">
