--- a/Proyecto/galeria.html
+++ b/Proyecto/galeria.html
@@ -25,7 +25,7 @@
                     <ul class="submenu">
                         <li><a style="padding: 15px;" href="#">Choco Fresas</a></li>
                         <li><a style="padding: 15px;" href="#">Corazones</a></li>
-                        <li><a style="padding: 15px;" href="#">Licores</a></li>
+                        <li><a style="padding: 15px;" href="/GaleriaHTML/licores.html">Licores</a></li>
                         <li><a style="padding: 15px;" href="#">Choco Sorpresas</a></li>
                         <li><a style="padding: 15px;" href="#">Figuras Especiales</a></li>
                         <li><a style="padding: 15px;" href="#">Cajas</a></li>
