--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -19,10 +19,10 @@
                 <li><a href="contacto.html"  style="padding: 5px;">Contactenos</a></li> |
                 <li><a href="galeria.html" style="padding: 5px;">Galeria</a>
                     <ul class="submenu">
-                        <li><a style="padding: 15px;" href="#">Choco Fresas</a></li>
+                        <li><a style="padding: 15px;" href="/GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
                         <li><a style="padding: 15px;" href="#">Corazones</a></li>
-                        <li><a style="padding: 15px;" href="#">Licores</a></li>
-                        <li><a style="padding: 15px;" href="#">Choco Sorpresas</a></li>
+                        <li><a style="padding: 15px;" href="/GaleriaHTML/licores.html">Licores</a></li>
+                        <li><a style="padding: 15px;" href="/GaleriaHTML/chocoSorpresa.html">Choco Sorpresas</a></li>
                         <li><a style="padding: 15px;" href="#">Figuras Especiales</a></li>
                         <li><a style="padding: 15px;" href="#">Cajas</a></li>
                         </ul></li> |
