Se agrega vinculo de tortaPaleta a las diferentes paginas y se agrega vinculo de inicio

--- a/Proyecto/registroClientes.html
+++ b/Proyecto/registroClientes.html
@@ -18,21 +18,21 @@
       <nav class="navegacion">
         <div>
           <ul class="menu">
+            <li><a href="inicio.html"  style="padding: 5px;">Inicio</a></li>
             <li>
               <a href="contacto.html" style="padding: 5px">Contactenos</a>
             </li>
             |
             <li>
-              <a href="galeria.html" style="padding: 5px">Galeria</a>
+              <a href="index.html" style="padding: 5px">Galeria</a>
               <ul class="submenu">
-                <li><a style="padding: 15px" href="#">Choco Fresas</a></li>
-                <li><a style="padding: 15px" href="#">Corazones</a></li>
-                <li><a style="padding: 15px" href="/GaleriaHTML/licores.html">Licores</a></li>
-                <li><a style="padding: 15px" href="#">Choco Sorpresas</a></li>
-                <li>
-                  <a style="padding: 15px" href="#">Figuras Especiales</a>
-                </li>
-                <li><a style="padding: 15px" href="#">Cajas</a></li>
+                <li><a style="padding: 15px;" href="/GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
+                <li><a style="padding: 15px;" href="#">Corazones</a></li>
+                <li><a style="padding: 15px;" href="/GaleriaHTML/licores.html">Licores</a></li>
+                <li><a style="padding: 15px;" href="/GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
+                <li><a style="padding: 15px;" href="/GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
+                <li><a style="padding: 15px;" href="#">Figuras Especiales</a></li>
+                <li><a style="padding: 15px;" href="#">Cajas</a></li>
               </ul>
             </li>
             |
