--- a/Proyecto/contacto.html
+++ b/Proyecto/contacto.html
@@ -20,18 +20,21 @@
         <nav class="navegacion">
           <div>
               <ul class="menu">
-                  <li><a href="contacto.html"  style="padding: 5px;">Contactenos</a></li> |
-                  <li><a href="galeria.html" style="padding: 5px;">Galeria</a>
+                    <li><a href="index.html"  style="padding: 5px;">Inicio</a></li>
+                    <li><a href="contacto.html"  style="padding: 5px;">Contactenos</a></li> |
+                    <li><a href="galeria.html" style="padding: 5px;">Galeria</a>
                       <ul class="submenu">
-                          <li><a style="padding: 15px;" href="#">Choco Fresas</a></li>
-                          <li><a style="padding: 15px;" href="#">Corazones</a></li>
-                          <li><a style="padding: 15px;" href="/GaleriaHTML/licores.html">Licores</a></li>
-                          <li><a style="padding: 15px;" href="#">Choco Sorpresas</a></li>
-                          <li><a style="padding: 15px;" href="#">Figuras Especiales</a></li>
-                          <li><a style="padding: 15px;" href="#">Cajas</a></li>
+                        <li><a style="padding: 15px;" href="/GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
+                        <li><a style="padding: 15px;" href="#">Corazones</a></li>
+                        <li><a style="padding: 15px;" href="/GaleriaHTML/licores.html">Licores</a></li>
+                        <li><a style="padding: 15px;" href="/GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
+                        <li><a style="padding: 15px;" href="/GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
+                        <li><a style="padding: 15px;" href="#">Figuras Especiales</a></li>
+                        <li><a style="padding: 15px;" href="#">Cajas</a></li>
                           </ul></li> |
-                  <li><a href="tienda.html"  style="padding: 5px;">Tienda</a></li> |
-                  <li><a href="registroClientes.html"  style="padding: 5px;">Registrese</a></li>  |
+                    <li><a href="tienda.html"  style="padding: 5px;">Tienda</a></li> |
+                    <li><a href="registroClientes.html"  style="padding: 5px;">Registrese</a></li>  |
+                  
               </ul>
           </div>
       </nav>
