--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -22,7 +22,8 @@
                         <li><a style="padding: 15px;" href="/GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
                         <li><a style="padding: 15px;" href="#">Corazones</a></li>
                         <li><a style="padding: 15px;" href="/GaleriaHTML/licores.html">Licores</a></li>
-                        <li><a style="padding: 15px;" href="/GaleriaHTML/chocoSorpresa.html">Choco Sorpresas</a></li>
+                        <li><a style="padding: 15px;" href="/GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
+                        <li><a style="padding: 15px;" href="/GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
                         <li><a style="padding: 15px;" href="#">Figuras Especiales</a></li>
                         <li><a style="padding: 15px;" href="#">Cajas</a></li>
                         </ul></li> |
