--- a/Proyecto/GaleriaHTML/tortaPaleta.html
+++ b/Proyecto/GaleriaHTML/tortaPaleta.html
@@ -21,11 +21,11 @@
               <li><a href="galeria.html" style="padding: 5px;">Galeria</a>
                   <ul class="submenu">
                     <li><a style="padding: 15px;" href="/GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
-                    <li><a style="padding: 15px;" href="#">Corazones</a></li>
+                    <li><a style="padding: 15px;" href="/GaleriaHTML/corazones.html">Corazones</a></li>
                     <li><a style="padding: 15px;" href="/GaleriaHTML/licores.html">Licores</a></li>
                     <li><a style="padding: 15px;" href="/GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
                     <li><a style="padding: 15px;" href="/GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
-                    <li><a style="padding: 15px;" href="#">Figuras Especiales</a></li>
+                    <li><a style="padding: 15px;" href="/GaleriaHTML/variedad.html">Figuras Especiales</a></li>
                     <li><a style="padding: 15px;" href="#">Cajas</a></li>
                       </ul></li> |
               <li><a href="tienda.html"  style="padding: 5px;">Tienda</a></li> |
@@ -40,13 +40,13 @@
         <div class="linea"></div>
         <div class="contenedorPaleta">
             <div class="imagen">
-                <img src="/Imagenes/tortaPaleta/tortaPaleta (1).png" alt="">
+                <img src="/Imagenes/tortaPaleta/tortaPaleta (8).png" alt="">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="/Imagenes/tortaPaleta/tortaPaleta (2).png" alt="">
+                <img src="/Imagenes/tortaPaleta/tortaPaleta (9).png" alt="">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="imagen">
-                <img src="/Imagenes/tortaPaleta/tortaPaleta (6).png" alt="" height="10%">
+                <img src="/Imagenes/tortaPaleta/tortaPaleta (6).png" alt="">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
@@ -82,13 +82,13 @@
                 </div>
             </div>
             <div class="imagen">
-                <img src="/Imagenes/tortaPaleta/tortaPaleta (8).png" alt="">
+                <img src="/Imagenes/tortaPaleta/tortaPaleta (15).jpeg" alt="">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="/Imagenes/tortaPaleta/tortaPaleta (9).png" alt="">
+                <img src="/Imagenes/tortaPaleta/tortaPaleta (1).png" alt="">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
@@ -101,6 +101,36 @@
             </div>
             <div class="imagen">
                 <img src="/Imagenes/tortaPaleta/tortaPaleta (11).png" alt="">
+                <div class="overlay">
+                    <h2>Comprar</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="/Imagenes/tortaPaleta/tortaPaleta (12).jpeg" alt="">
+                <div class="overlay">
+                    <h2>Comprar</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="/Imagenes/tortaPaleta/tortaPaleta (13).jpeg" alt="">
+                <div class="overlay">
+                    <h2>Comprar</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="/Imagenes/tortaPaleta/tortaPaleta (14).jpeg" alt="">
+                <div class="overlay">
+                    <h2>Comprar</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="/Imagenes/tortaPaleta/tortaPaleta (2).png" alt="">
+                <div class="overlay">
+                    <h2>Comprar</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="/Imagenes/tortaPaleta/tortaPaleta (16).jpeg" alt="">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
