--- a/Proyecto/registroClientes.html
+++ b/Proyecto/registroClientes.html
@@ -27,11 +27,11 @@
               <a href="index.html" style="padding: 5px">Galeria</a>
               <ul class="submenu">
                 <li><a style="padding: 15px;" href="/GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
-                <li><a style="padding: 15px;" href="#">Corazones</a></li>
+                <li><a style="padding: 15px;" href="/GaleriaHTML/corazones.html">Corazones</a></li>
                 <li><a style="padding: 15px;" href="/GaleriaHTML/licores.html">Licores</a></li>
                 <li><a style="padding: 15px;" href="/GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
                 <li><a style="padding: 15px;" href="/GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
-                <li><a style="padding: 15px;" href="#">Figuras Especiales</a></li>
+                <li><a style="padding: 15px;" href="/GaleriaHTML/variedad.html">Figuras Especiales</a></li>
                 <li><a style="padding: 15px;" href="#">Cajas</a></li>
               </ul>
             </li>
