--- a/Proyecto/GaleriaHTML/variedad.html
+++ b/Proyecto/GaleriaHTML/variedad.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>ChocoFresas - Freya</title>
+    <title>Variedad - Freya</title>
     <link rel="stylesheet" href="/CSS/galeriaIMG.css">
     <link rel="stylesheet" href="/CSS/estilos.css">
 </head>
@@ -16,16 +16,16 @@
     <nav class="navegacion">
       <div>
           <ul class="menu">
-            <li><a href="/index.html"  style="padding: 5px;">Inicio</a></li>
+              <li><a href="/index.html"  style="padding: 5px;">Inicio</a></li>
               <li><a href="contacto.html"  style="padding: 5px;">Contactenos</a></li> |
               <li><a href="galeria.html" style="padding: 5px;">Galeria</a>
                   <ul class="submenu">
                     <li><a style="padding: 15px;" href="/GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
-                    <li><a style="padding: 15px;" href="/GaleriaHTML/corazones.html">Corazones</a></li>
+                    <li><a style="padding: 15px;" href="#">Corazones</a></li>
                     <li><a style="padding: 15px;" href="/GaleriaHTML/licores.html">Licores</a></li>
                     <li><a style="padding: 15px;" href="/GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
                     <li><a style="padding: 15px;" href="/GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
-                    <li><a style="padding: 15px;" href="/GaleriaHTML/variedad.html">Figuras Especiales</a></li>
+                    <li><a style="padding: 15px;" href="#">Figuras Especiales</a></li>
                     <li><a style="padding: 15px;" href="#">Cajas</a></li>
                       </ul></li> |
               <li><a href="tienda.html"  style="padding: 5px;">Tienda</a></li> |
@@ -38,77 +38,39 @@
 <body>
     <div class="galeria">
         <div class="linea"></div>
-        <div class="contenedor">
+        <div class="contenedorVariedad">
             <div class="imagen">
-                <img src="/Imagenes/chocoFresas/10Fresas.jpeg" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
-                </div>
-            </div>
-            <div class="imagen">
-                <img src="/Imagenes/chocoFresas/3Fresas.jpeg" alt="">
+                <img src="/Imagenes/variedad/variedad (1).jpeg" alt="">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="/Imagenes/chocoFresas/8Fresas.jpeg" alt="">
+                <img src="/Imagenes/variedad/variedad (1).png" alt="">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="/Imagenes/chocoFresas/8Fresas_2.jpeg" alt="">
+                <img src="/Imagenes/variedad/variedad (2).jpeg" alt="">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="/Imagenes/chocoFresas/12Fresas.jpeg" alt="">
+                <img src="/Imagenes/variedad/variedad (2).png" alt="">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="/Imagenes/chocoFresas/15Fresas_2.jpeg" alt="" height="10%">
+                <img src="/Imagenes/variedad/variedad (3).jpeg" alt="">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="/Imagenes/chocoFresas/15Fresas.jpeg" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
-                </div>
-            </div>
-            <div class="imagen">
-                <img src="/Imagenes/chocoFresas/canastaFresa.jpeg" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
-                </div>
-            </div>
-            <div class="imagen">
-                <img src="/Imagenes/chocoFresas/cajaFresa.jpeg" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
-                </div>
-            </div>
-        </div>
-        <div class="contenedorVertical">
-            <div class="imagenVertical">
-                <img src="/Imagenes/chocoFresas/oreoFresas.jpeg" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
-                </div>
-            </div>
-            <div class="imagenVertical">
-                <img src="/Imagenes/chocoFresas/6Fresas.jpeg" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
-                </div>
-            </div>
-            <div class="imagenVertical">
-                <img src="/Imagenes/chocoFresas/8Fresas_3.jpeg" alt="">
+                <img src="/Imagenes/variedad/variedad (4).jpeg" alt="">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
