--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -20,11 +20,11 @@
                 <li><a href="galeria.html" style="padding: 5px;">Galeria</a>
                     <ul class="submenu">
                         <li><a style="padding: 15px;" href="/GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
-                        <li><a style="padding: 15px;" href="#">Corazones</a></li>
+                        <li><a style="padding: 15px;" href="/GaleriaHTML/corazones.html">Corazones</a></li>
                         <li><a style="padding: 15px;" href="/GaleriaHTML/licores.html">Licores</a></li>
                         <li><a style="padding: 15px;" href="/GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
                         <li><a style="padding: 15px;" href="/GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
-                        <li><a style="padding: 15px;" href="#">Figuras Especiales</a></li>
+                        <li><a style="padding: 15px;" href="/GaleriaHTML/variedad.html">Figuras Especiales</a></li>
                         <li><a style="padding: 15px;" href="#">Cajas</a></li>
                         </ul></li> |
                 <li><a href="tienda.html"  style="padding: 5px;">Tienda</a></li> |
