--- a/Proyecto/contacto.html
+++ b/Proyecto/contacto.html
@@ -7,6 +7,11 @@
     <title>Contáctenos - Freya</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link href="CSS/estilos.css" rel="stylesheet">
+    <!-- Las siguientes 3 líneas corresponden a la asignación de estilo de letra desde Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@500&family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <!-- -->
 </head>
 
 <body>
@@ -65,8 +70,13 @@
     
     </form>
     <hr />
-    <footer style="text-align: center; background-color: #cdb4db; padding: 20px">
-        <h2>Para mayor información escribe al WhatsApp <i class="bi bi-whatsapp">30000000</i></h2>
+    <footer class="footer">
+        <h2 class="titulofooter">Dirección: Transversal 2c #14c 38. Villas del Sutagao. Fusagasugá-Cundinamarca</h2>
+        <h2 class="titulofooter">Teléfono/Whatsapp: <i class="bi bi-whatsapp">30000000</i></h2>
+        <h2 class="titulofooter">Horario de atención: Lunes a Sábado de 8:00 am a 6:00 pm</h2>
+        <br>
+        <img class="IMG_footer" src="Imagenes/instagram.svg">
+        <img class="IMG_footer" src="Imagenes/facebook.svg">
     </footer>
 
 </body>
