--- a/Proyecto/tienda.html
+++ b/Proyecto/tienda.html
@@ -7,6 +7,11 @@
     <title>Tienda - Freya</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link href="CSS/estilos.css" rel="stylesheet">
+    <!-- Las siguientes 3 líneas corresponden a la asignación de estilo de letra desde Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@500&family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <!-- -->
 </head>
 <body>
     <header>
@@ -62,8 +67,13 @@
             </table>
         </div>
     </main>
-    <footer style="background-color: #cdb4db; width: 100%; height: 100px; margin-top: 100px; text-align: center">
-        <h2>Para mayor información escribe al WhatsApp <i class="bi bi-whatsapp">30000000</i></h2>
+    <footer class="footer">
+        <h2 class="titulofooter">Dirección: Transversal 2c #14c 38. Villas del Sutagao. Fusagasugá-Cundinamarca</h2>
+        <h2 class="titulofooter">Teléfono/Whatsapp: <i class="bi bi-whatsapp">30000000</i></h2>
+        <h2 class="titulofooter">Horario de atención: Lunes a Sábado de 8:00 am a 6:00 pm</h2>
+        <br>
+        <img class="IMG_footer" src="Imagenes/instagram.svg">
+        <img class="IMG_footer" src="Imagenes/facebook.svg">
     </footer>
 </body>
 </html>
